Fixed overlapping on grid

--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -9,9 +9,10 @@
 // }
 
 .card {
-  margin: 0 2rem 3rem 2rem;
+  margin: 0 2rem 0 2rem;
   align-items: center;
-  max-height: 40vh;
+  // max-height: 40vh;
+  margin-bottom: 3rem;
 }
 
 .card1 {
@@ -50,6 +51,7 @@
   line-height: 15px;
   align-items: center;
   color: #8f8f8f;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 840px) {
